--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,80 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.message-list {
+  list-style-type: none;
+  padding-inline: 8px;
+  max-width: 600px;
+  margin: 20px auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.message-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sent {
+  justify-content: flex-end;
+}
+
+.received {
+  justify-content: flex-start;
+}
+
+.message-content {
+  padding: 10px;
+  border-radius: 8px;
+  max-width: 70%;
+  word-wrap: break-word;
+}
+
+.sent .message-content {
+  background-color: #add8e6;
+  color: #004f80;
+}
+
+.received .message-content {
+  background-color: #f5f5f5;
+  color: #333333;
+}
+
+.section-title {
+  margin-bottom: 20px;
+}
+
+.message-input {
+  height: 36px;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  width: calc(100% - 110px); 
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+
+.send-button {
+  height: 36px;
+  padding: 10px 20px;
+  margin-left: 4px;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.send-button:hover {
+  background-color: #0056b3; 
+}
+
+.app-container {
+  max-width: 600px;
+  margin: auto;
+  box-shadow: 0 0 4px rgba(0,0,0,0.2);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  justify-content: space-between;
+  height: 98vh;
 }
